--- a/druga pred/style/sign-in.css
+++ b/druga pred/style/sign-in.css
@@ -100,7 +100,7 @@ a {
 
 .bg-image {
     height: 300px;
-    background-image: url("../images/header.jpg");
+    background-image: url("../images/bg-login.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
